service.yaml
# 4. Service for Hostname App
apiVersion: v1
kind: Service
metadata:
  name: hostname-service
  namespace: demoapp
spec:
  selector:
    app: hostname-app
  ports:
  - port: 80
    targetPort: 5678
